[gd_scene load_steps=8 format=3 uid="uid://qad3qlntlhkr"]

[ext_resource type="PackedScene" uid="uid://7yeha732687s" path="res://Prefabs/CustomButton.tscn" id="1_be20i"]
[ext_resource type="Script" path="res://Prefabs/ButtonManager.gd" id="1_ktn48"]
[ext_resource type="PackedScene" uid="uid://br04ppqnb3sid" path="res://Prefabs/description_header.tscn" id="3_slqay"]
[ext_resource type="PackedScene" uid="uid://5sstta113f5f" path="res://Prefabs/section_header.tscn" id="4_h84ja"]
[ext_resource type="PackedScene" uid="uid://ckwu7inav4toy" path="res://Prefabs/outline.tscn" id="5_aqvi3"]
[ext_resource type="PackedScene" uid="uid://cw4qp0sr0ty81" path="res://Prefabs/little_button.tscn" id="6_gfvdq"]
[ext_resource type="PackedScene" uid="uid://cu68hehdh0ebx" path="res://Prefabs/worm_rain.tscn" id="7_7ai5g"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_ktn48")
fishPrice = 1
babyWormPrice = 500000
shovelRise = 1.25
fishRise = 1.25
grandpaPriceRise = 1.1

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.960784, 0.560784, 0.560784, 1)

[node name="DescriptionHeader" parent="." instance=ExtResource("3_slqay")]
metadata/_edit_use_anchors_ = true

[node name="WormHeader" parent="." instance=ExtResource("4_h84ja")]
offset_left = 16.0
offset_top = 88.0
offset_right = 16.0
offset_bottom = 88.0
metadata/_edit_use_anchors_ = true

[node name="WormsButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(8, 164)

[node name="ShovelButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(8, 260)

[node name="GrandpaButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(8, 356)

[node name="FishButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(296, 164)

[node name="FishingPoleButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(296, 260)

[node name="LicenseButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(296, 356)

[node name="LibraryCardButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(296, 452)

[node name="ReadBooksButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(584, 164)

[node name="StudyWormsButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(584, 260)

[node name="StudyFishButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(584, 356)

[node name="GoatButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(584, 452)

[node name="OfferingButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(584, 548)

[node name="PowerButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(880, 164)

[node name="BabyButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(880, 260)

[node name="UnlockButton" parent="." instance=ExtResource("1_be20i")]
position = Vector2(880, 356)

[node name="PowerHeader" parent="." instance=ExtResource("4_h84ja")]
offset_left = 888.0
offset_top = 88.0
offset_right = 888.0
offset_bottom = 88.0

[node name="KnowledgeHeader" parent="." instance=ExtResource("4_h84ja")]
offset_left = 592.0
offset_top = 88.0
offset_right = 592.0
offset_bottom = 88.0

[node name="FishHeader" parent="." instance=ExtResource("4_h84ja")]
offset_left = 304.0
offset_top = 88.0
offset_right = 304.0
offset_bottom = 88.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Outline" parent="." instance=ExtResource("5_aqvi3")]

[node name="AutoButtonFast" parent="." instance=ExtResource("6_gfvdq")]
offset_left = 1077.0
offset_top = 9.0
offset_right = 1142.0
offset_bottom = 74.0

[node name="AutoButtonSlow" parent="." instance=ExtResource("6_gfvdq")]
offset_left = 1005.0
offset_top = 9.0
offset_right = 1070.0
offset_bottom = 74.0

[node name="Darkness" type="DirectionalLight2D" parent="."]
energy = 0.4
blend_mode = 1

[node name="WormRain" parent="." instance=ExtResource("7_7ai5g")]
